Resolved all bugs TODO: Filter has become slow, investigate